package v04;

public class Celda {
    
    private String contenido;

    public Celda() {
        this.contenido = "";
    }

    public String getContenido() {
        return contenido;
    }

    public void setContenido(String contenido) {
        this.contenido = contenido;
    }            
}
